Added sections for core structure

--- a/index.html
+++ b/index.html
@@ -9,11 +9,14 @@
     <meta name="keywords" content="love running, running club, ireland, dublin">
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Love Running</title>
-
 </head>
 
 <body>
-    <h1>This is a test</h1>
+    <header>Header content</header>
+    <section>img</section>
+    <section>credo</section>
+    <section>meet ups</section>
+    <footer>socials</footer>
 </body>
 
 </html>
