--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
             </ul>
         </nav>
     </header>
-    <section>img</section>
+    <section>
+        <div id="hero-image"></div>
+    </section>
     <section>credo</section>
     <section>meet ups</section>
     <footer>socials</footer>
